# g1-dev

./: .gitignore  README.md  arm_terminal.py  config.py  controller.py  demo_body.py  demo_hands.py  demo_terminal.py  g1_joints.py  g1_logger.py  helpers.py  inspire_bridge.py  inspire_publish.py  inspire_subscribe.py  publish_test.py  setup.cfg  sim2real.py  subscribe_test.py  test_arm_sdk.py  test_high_level.py  unitree_mujoco.py  unitree_sdk2py_bridge.py
camera/: camera_bridge.py  camera_subscriber.py  g1_camera_publisher.py  utils.py
camera/camera_dds/: __init__.py  _camera_image.py
g1/: d435i.xml  g1_23dof.xml  g1_29dof_with_inspire.xml  scene_29dof.xml  scene_29dof_with_inspire.xml  table_with_objects.xml
inspire/: conversions.py  inspire_bridge.py  inspire_defaults.py  joint_mapping.py  modbus_data_handler.py  publish_test.py  subscribe_test.py
inspire/inspire_dds/: _inspire_hand_ctrl.py  _inspire_hand_state.py  _inspire_hand_touch.py
log/: data_20250908_162647.pkl  data_latest.pkl
logger/: g1_logger.py  playback.py  read_example.py
teleop/teleop_dds/: __init__.py  _xr_teleop_data.py
tests/: publish_test.py  subscribe_test.py  test_arm_sdk.py  test_high_level.py
unitree/: unitree_bridge.py  unitree_mujoco.py  unitree_sdk2py_bridge.py
