[metadata]
name = g1-dev
version = 0.1.0
description = G1 development package

[options]
packages = find:
python_requires = >=3.9,<3.11
include_package_data = True
install_requires =
	absl-py==2.3.1
	click==8.2.1
	cyclonedds==0.10.2
	etils==1.13.0
	fsspec==2025.9.0
	glfw==2.9.0
	importlib_resources==6.5.2
	markdown-it-py==4.0.0
	mdurl==0.1.2
	mujoco==3.3.5
	numpy==2.2.6
	opencv-python==4.12.0.88
	pygame==2.6.1
	Pygments==2.19.2
	pymodbus==3.11.1
	PyOpenGL==3.1.10
	rich==14.1.0
	rich-click==1.8.9
	typing_extensions==4.15.0
	zipp==3.23.0

[options.packages.find]
where = .